small changes to support osx clang

--- a/test/makefile
+++ b/test/makefile
@@ -1,8 +1,8 @@
 compile:
-	g++ -Wall -o run_tests *.cpp src/*.cpp
+	g++ -std=c++14 -Wall -o run_tests *.cpp src/*.cpp
 
 debug:
-	g++ -Wall -g -o run_tests *.cpp src/*.cpp
+	g++ -std=c++14 -Wall -g -o run_tests *.cpp src/*.cpp
 
 clean:
 	rm run_tests
